[tool.poetry]
package-mode = false

[project]
name = "trading-signals"
version = "0.1.0"
description = ""
authors = [
    {name = "Emil Yankov",email = "emil.yankov@gmail.com"}
]
requires-python = "^3.12"
dependencies = [
    "matplotlib (>=3.10.8,<4.0.0)",
    "numpy (>=2.4.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.8,<0.16.0)",
    "pyright (>=1.1.408,<2.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)"
]
